--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "nodemon": "^2.0.4",
         "prettier": "^2.1.2",
         "rimraf": "^3.0.2",
+        "runtypes": "^6.3.2",
         "ts-node": "^10.1.0",
         "typescript": "^4.3.5"
     },
